nav overflow fix

--- a/src/main/resources/static/booknest/css/top-nav.css
+++ b/src/main/resources/static/booknest/css/top-nav.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 12px 30px;
+  padding: 7px 0;
   height: 50px;
   box-shadow: 0 2px 10px rgba(255, 255, 255, 0.05);
   z-index: 1000;
